nav bar and alignment issues fixed.

--- a/Question1/style.css
+++ b/Question1/style.css
@@ -1,10 +1,16 @@
 body {
-    font-family: 'Segoe UI', sans-serif;
-    background: #f0f2f5;
-    padding: 20px;
+    font-family:  'Times New Roman', Times, serif;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 auto;
+    width: 60%;
+}
+
+body .navbar {
+    background-color: #5092e7;
+    overflow: hidden;
+    width: 100%;
 }
 
 .container {
